Meta2/y.output
Terminals unused in grammar

   RESERVED


Gramática

    0 $accept: Start $end

    1 Start: Start FunctionDefinition
    2      | Start FunctionDeclaration
    3      | Start Declaration
    4      | FunctionDefinition
    5      | FunctionDeclaration
    6      | Declaration

    7 FunctionDefinition: TypeSpec FunctionDeclarator FunctionBody

    8 FunctionBody: LBRACE DeclarationList StatementList RBRACE
    9             | LBRACE DeclarationList RBRACE
   10             | LBRACE StatementList RBRACE
   11             | LBRACE RBRACE
   12             | LBRACE error RBRACE

   13 DeclarationList: DeclarationList Declaration
   14                | Declaration

   15 StatementList: StatementList ErrStatement
   16              | Statement

   17 FunctionDeclaration: TypeSpec FunctionDeclarator SEMI

   18 FunctionDeclarator: AstList ID LPAR ParameterList RPAR
   19                   | ID LPAR ParameterList RPAR

   20 ParameterList: ParameterList COMMA ParameterDeclaration
   21              | ParameterDeclaration

   22 ParameterDeclaration: TypeSpec AstList ID
   23                     | TypeSpec ID
   24                     | TypeSpec AstList
   25                     | TypeSpec

   26 Declaration: TypeSpec DeclaratorList SEMI
   27            | error SEMI

   28 DeclaratorList: DeclaratorList COMMA Declarator
   29               | Declarator

   30 TypeSpec: CHAR
   31         | INT
   32         | VOID

   33 Declarator: AstList ID LSQ INTLIT RSQ
   34           | ID LSQ INTLIT RSQ
   35           | AstList ID
   36           | ID

   37 AstList: AstList AST
   38        | AST

   39 ErrStatement: ExprOpt SEMI
   40             | LBRACE StatList RBRACE
   41             | LBRACE RBRACE
   42             | LBRACE error RBRACE
   43             | IF LPAR GeneralExpr RPAR ErrStatement
   44             | IF LPAR GeneralExpr RPAR ErrStatement ELSE ErrStatement
   45             | FOR LPAR ExprOpt SEMI ExprOpt SEMI ExprOpt RPAR ErrStatement
   46             | RETURN ExprOpt SEMI
   47             | error SEMI

   48 Statement: ExprOpt SEMI
   49          | LBRACE StatList RBRACE
   50          | LBRACE RBRACE
   51          | LBRACE error RBRACE
   52          | IF LPAR GeneralExpr RPAR ErrStatement
   53          | IF LPAR GeneralExpr RPAR ErrStatement ELSE ErrStatement
   54          | FOR LPAR ExprOpt SEMI ExprOpt SEMI ExprOpt RPAR ErrStatement
   55          | RETURN ExprOpt SEMI

   56 StatList: StatList ErrStatement
   57         | ErrStatement

   58 ExprOpt: GeneralExpr
   59        | %empty

   60 GeneralExpr: GeneralExpr COMMA Expr
   61            | Expr

   62 Expr: Expr ASSIGN Expr
   63     | Expr AND Expr
   64     | Expr OR Expr
   65     | Expr EQ Expr
   66     | Expr NE Expr
   67     | Expr LT Expr
   68     | Expr GT Expr
   69     | Expr LE Expr
   70     | Expr GE Expr
   71     | Expr PLUS Expr
   72     | Expr MINUS Expr
   73     | Expr AST Expr
   74     | Expr DIV Expr
   75     | Expr MOD Expr
   76     | AMP Expr
   77     | AST Expr
   78     | PLUS Expr
   79     | MINUS Expr
   80     | NOT Expr
   81     | Expr LSQ GeneralExpr RSQ
   82     | ID LPAR ExprList RPAR
   83     | ID LPAR RPAR
   84     | ID LPAR error RPAR
   85     | ID
   86     | INTLIT
   87     | CHRLIT
   88     | STRLIT
   89     | LPAR GeneralExpr RPAR
   90     | LPAR error RPAR

   91 ExprList: ExprList COMMA Expr
   92         | Expr


Terminais, com as regras aonde aparecem

$end (0) 0
error (256) 12 27 42 47 51 84 90
AMP (258) 76
AND (259) 63
ASSIGN (260) 62
AST (261) 37 38 73 77
CHAR (262) 30
COMMA (263) 20 28 60 91
DIV (264) 74
ELSE (265) 44 53
EQ (266) 65
FOR (267) 45 54
GE (268) 70
GT (269) 68
IF (270) 43 44 52 53
INT (271) 31
LBRACE (272) 8 9 10 11 12 40 41 42 49 50 51
LE (273) 69
LPAR (274) 18 19 43 44 45 52 53 54 82 83 84 89 90
LSQ (275) 33 34 81
LT (276) 67
MINUS (277) 72 79
MOD (278) 75
NE (279) 66
NOT (280) 80
OR (281) 64
PLUS (282) 71 78
RBRACE (283) 8 9 10 11 12 40 41 42 49 50 51
RETURN (284) 46 55
RPAR (285) 18 19 43 44 45 52 53 54 82 83 84 89 90
RSQ (286) 33 34 81
SEMI (287) 17 26 27 39 45 46 47 48 54 55
VOID (288) 32
RESERVED (289)
ID (290) 18 19 22 23 33 34 35 36 82 83 84 85
INTLIT (291) 33 34 86
CHRLIT (292) 87
STRLIT (293) 88
IFX (294)


Não-terminais, com as regras aonde aparecem

$accept (40)
    à esquerda: 0
Start (41)
    à esquerda: 1 2 3 4 5 6, à direita: 0 1 2 3
FunctionDefinition (42)
    à esquerda: 7, à direita: 1 4
FunctionBody (43)
    à esquerda: 8 9 10 11 12, à direita: 7
DeclarationList (44)
    à esquerda: 13 14, à direita: 8 9 13
StatementList (45)
    à esquerda: 15 16, à direita: 8 10 15
FunctionDeclaration (46)
    à esquerda: 17, à direita: 2 5
FunctionDeclarator (47)
    à esquerda: 18 19, à direita: 7 17
ParameterList (48)
    à esquerda: 20 21, à direita: 18 19 20
ParameterDeclaration (49)
    à esquerda: 22 23 24 25, à direita: 20 21
Declaration (50)
    à esquerda: 26 27, à direita: 3 6 13 14
DeclaratorList (51)
    à esquerda: 28 29, à direita: 26 28
TypeSpec (52)
    à esquerda: 30 31 32, à direita: 7 17 22 23 24 25 26
Declarator (53)
    à esquerda: 33 34 35 36, à direita: 28 29
AstList (54)
    à esquerda: 37 38, à direita: 18 22 24 33 35 37
ErrStatement (55)
    à esquerda: 39 40 41 42 43 44 45 46 47, à direita: 15 43 44 45
    52 53 54 56 57
Statement (56)
    à esquerda: 48 49 50 51 52 53 54 55, à direita: 16
StatList (57)
    à esquerda: 56 57, à direita: 40 49 56
ExprOpt (58)
    à esquerda: 58 59, à direita: 39 45 46 48 54 55
GeneralExpr (59)
    à esquerda: 60 61, à direita: 43 44 52 53 58 60 81 89
Expr (60)
    à esquerda: 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78
    79 80 81 82 83 84 85 86 87 88 89 90, à direita: 60 61 62 63 64
    65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 91 92
ExprList (61)
    à esquerda: 91 92, à direita: 82 91


State 0

    0 $accept: . Start $end

    error  fazer shift, e ir para o estado 1
    CHAR   fazer shift, e ir para o estado 2
    INT    fazer shift, e ir para o estado 3
    VOID   fazer shift, e ir para o estado 4

    Start                ir para o estado 5
    FunctionDefinition   ir para o estado 6
    FunctionDeclaration  ir para o estado 7
    Declaration          ir para o estado 8
    TypeSpec             ir para o estado 9


State 1

   27 Declaration: error . SEMI

    SEMI  fazer shift, e ir para o estado 10


State 2

   30 TypeSpec: CHAR .

    $default  reduzir usando a regra 30 (TypeSpec)


State 3

   31 TypeSpec: INT .

    $default  reduzir usando a regra 31 (TypeSpec)


State 4

   32 TypeSpec: VOID .

    $default  reduzir usando a regra 32 (TypeSpec)


State 5

    0 $accept: Start . $end
    1 Start: Start . FunctionDefinition
    2      | Start . FunctionDeclaration
    3      | Start . Declaration

    $end   fazer shift, e ir para o estado 11
    error  fazer shift, e ir para o estado 1
    CHAR   fazer shift, e ir para o estado 2
    INT    fazer shift, e ir para o estado 3
    VOID   fazer shift, e ir para o estado 4

    FunctionDefinition   ir para o estado 12
    FunctionDeclaration  ir para o estado 13
    Declaration          ir para o estado 14
    TypeSpec             ir para o estado 9


State 6

    4 Start: FunctionDefinition .

    $default  reduzir usando a regra 4 (Start)


State 7

    5 Start: FunctionDeclaration .

    $default  reduzir usando a regra 5 (Start)


State 8

    6 Start: Declaration .

    $default  reduzir usando a regra 6 (Start)


State 9

    7 FunctionDefinition: TypeSpec . FunctionDeclarator FunctionBody
   17 FunctionDeclaration: TypeSpec . FunctionDeclarator SEMI
   26 Declaration: TypeSpec . DeclaratorList SEMI

    AST  fazer shift, e ir para o estado 15
    ID   fazer shift, e ir para o estado 16

    FunctionDeclarator  ir para o estado 17
    DeclaratorList      ir para o estado 18
    Declarator          ir para o estado 19
    AstList             ir para o estado 20


State 10

   27 Declaration: error SEMI .

    $default  reduzir usando a regra 27 (Declaration)


State 11

    0 $accept: Start $end .

    $default  aceite


State 12

    1 Start: Start FunctionDefinition .

    $default  reduzir usando a regra 1 (Start)


State 13

    2 Start: Start FunctionDeclaration .

    $default  reduzir usando a regra 2 (Start)


State 14

    3 Start: Start Declaration .

    $default  reduzir usando a regra 3 (Start)


State 15

   38 AstList: AST .

    $default  reduzir usando a regra 38 (AstList)


State 16

   19 FunctionDeclarator: ID . LPAR ParameterList RPAR
   34 Declarator: ID . LSQ INTLIT RSQ
   36           | ID .

    LPAR  fazer shift, e ir para o estado 21
    LSQ   fazer shift, e ir para o estado 22

    $default  reduzir usando a regra 36 (Declarator)


State 17

    7 FunctionDefinition: TypeSpec FunctionDeclarator . FunctionBody
   17 FunctionDeclaration: TypeSpec FunctionDeclarator . SEMI

    LBRACE  fazer shift, e ir para o estado 23
    SEMI    fazer shift, e ir para o estado 24

    FunctionBody  ir para o estado 25


State 18

   26 Declaration: TypeSpec DeclaratorList . SEMI
   28 DeclaratorList: DeclaratorList . COMMA Declarator

    COMMA  fazer shift, e ir para o estado 26
    SEMI   fazer shift, e ir para o estado 27


State 19

   29 DeclaratorList: Declarator .

    $default  reduzir usando a regra 29 (DeclaratorList)


State 20

   18 FunctionDeclarator: AstList . ID LPAR ParameterList RPAR
   33 Declarator: AstList . ID LSQ INTLIT RSQ
   35           | AstList . ID
   37 AstList: AstList . AST

    AST  fazer shift, e ir para o estado 28
    ID   fazer shift, e ir para o estado 29


State 21

   19 FunctionDeclarator: ID LPAR . ParameterList RPAR

    CHAR  fazer shift, e ir para o estado 2
    INT   fazer shift, e ir para o estado 3
    VOID  fazer shift, e ir para o estado 4

    ParameterList         ir para o estado 30
    ParameterDeclaration  ir para o estado 31
    TypeSpec              ir para o estado 32


State 22

   34 Declarator: ID LSQ . INTLIT RSQ

    INTLIT  fazer shift, e ir para o estado 33


State 23

    8 FunctionBody: LBRACE . DeclarationList StatementList RBRACE
    9             | LBRACE . DeclarationList RBRACE
   10             | LBRACE . StatementList RBRACE
   11             | LBRACE . RBRACE
   12             | LBRACE . error RBRACE

    error   fazer shift, e ir para o estado 34
    AMP     fazer shift, e ir para o estado 35
    AST     fazer shift, e ir para o estado 36
    CHAR    fazer shift, e ir para o estado 2
    FOR     fazer shift, e ir para o estado 37
    IF      fazer shift, e ir para o estado 38
    INT     fazer shift, e ir para o estado 3
    LBRACE  fazer shift, e ir para o estado 39
    LPAR    fazer shift, e ir para o estado 40
    MINUS   fazer shift, e ir para o estado 41
    NOT     fazer shift, e ir para o estado 42
    PLUS    fazer shift, e ir para o estado 43
    RBRACE  fazer shift, e ir para o estado 44
    RETURN  fazer shift, e ir para o estado 45
    VOID    fazer shift, e ir para o estado 4
    ID      fazer shift, e ir para o estado 46
    INTLIT  fazer shift, e ir para o estado 47
    CHRLIT  fazer shift, e ir para o estado 48
    STRLIT  fazer shift, e ir para o estado 49

    SEMI  reduzir usando a regra 59 (ExprOpt)

    DeclarationList  ir para o estado 50
    StatementList    ir para o estado 51
    Declaration      ir para o estado 52
    TypeSpec         ir para o estado 53
    Statement        ir para o estado 54
    ExprOpt          ir para o estado 55
    GeneralExpr      ir para o estado 56
    Expr             ir para o estado 57


State 24

   17 FunctionDeclaration: TypeSpec FunctionDeclarator SEMI .

    $default  reduzir usando a regra 17 (FunctionDeclaration)


State 25

    7 FunctionDefinition: TypeSpec FunctionDeclarator FunctionBody .

    $default  reduzir usando a regra 7 (FunctionDefinition)


State 26

   28 DeclaratorList: DeclaratorList COMMA . Declarator

    AST  fazer shift, e ir para o estado 15
    ID   fazer shift, e ir para o estado 58

    Declarator  ir para o estado 59
    AstList     ir para o estado 60


State 27

   26 Declaration: TypeSpec DeclaratorList SEMI .

    $default  reduzir usando a regra 26 (Declaration)


State 28

   37 AstList: AstList AST .

    $default  reduzir usando a regra 37 (AstList)


State 29

   18 FunctionDeclarator: AstList ID . LPAR ParameterList RPAR
   33 Declarator: AstList ID . LSQ INTLIT RSQ
   35           | AstList ID .

    LPAR  fazer shift, e ir para o estado 61
    LSQ   fazer shift, e ir para o estado 62

    $default  reduzir usando a regra 35 (Declarator)


State 30

   19 FunctionDeclarator: ID LPAR ParameterList . RPAR
   20 ParameterList: ParameterList . COMMA ParameterDeclaration

    COMMA  fazer shift, e ir para o estado 63
    RPAR   fazer shift, e ir para o estado 64


State 31

   21 ParameterList: ParameterDeclaration .

    $default  reduzir usando a regra 21 (ParameterList)


State 32

   22 ParameterDeclaration: TypeSpec . AstList ID
   23                     | TypeSpec . ID
   24                     | TypeSpec . AstList
   25                     | TypeSpec .

    AST  fazer shift, e ir para o estado 15
    ID   fazer shift, e ir para o estado 65

    $default  reduzir usando a regra 25 (ParameterDeclaration)

    AstList  ir para o estado 66


State 33

   34 Declarator: ID LSQ INTLIT . RSQ

    RSQ  fazer shift, e ir para o estado 67


State 34

   12 FunctionBody: LBRACE error . RBRACE
   27 Declaration: error . SEMI

    RBRACE  fazer shift, e ir para o estado 68
    SEMI    fazer shift, e ir para o estado 10


State 35

   76 Expr: AMP . Expr

    AMP     fazer shift, e ir para o estado 35
    AST     fazer shift, e ir para o estado 36
    LPAR    fazer shift, e ir para o estado 40
    MINUS   fazer shift, e ir para o estado 41
    NOT     fazer shift, e ir para o estado 42
    PLUS    fazer shift, e ir para o estado 43
    ID      fazer shift, e ir para o estado 46
    INTLIT  fazer shift, e ir para o estado 47
    CHRLIT  fazer shift, e ir para o estado 48
    STRLIT  fazer shift, e ir para o estado 49

    Expr  ir para o estado 69


State 36

   77 Expr: AST . Expr

    AMP     fazer shift, e ir para o estado 35
    AST     fazer shift, e ir para o estado 36
    LPAR    fazer shift, e ir para o estado 40
    MINUS   fazer shift, e ir para o estado 41
    NOT     fazer shift, e ir para o estado 42
    PLUS    fazer shift, e ir para o estado 43
    ID      fazer shift, e ir para o estado 46
    INTLIT  fazer shift, e ir para o estado 47
    CHRLIT  fazer shift, e ir para o estado 48
    STRLIT  fazer shift, e ir para o estado 49

    Expr  ir para o estado 70


State 37

   54 Statement: FOR . LPAR ExprOpt SEMI ExprOpt SEMI ExprOpt RPAR ErrStatement

    LPAR  fazer shift, e ir para o estado 71


State 38

   52 Statement: IF . LPAR GeneralExpr RPAR ErrStatement
   53          | IF . LPAR GeneralExpr RPAR ErrStatement ELSE ErrStatement

    LPAR  fazer shift, e ir para o estado 72


State 39

   49 Statement: LBRACE . StatList RBRACE
   50          | LBRACE . RBRACE
   51          | LBRACE . error RBRACE

    error   fazer shift, e ir para o estado 73
    AMP     fazer shift, e ir para o estado 35
    AST     fazer shift, e ir para o estado 36
    FOR     fazer shift, e ir para o estado 74
    IF      fazer shift, e ir para o estado 75
    LBRACE  fazer shift, e ir para o estado 76
    LPAR    fazer shift, e ir para o estado 40
    MINUS   fazer shift, e ir para o estado 41
    NOT     fazer shift, e ir para o estado 42
    PLUS    fazer shift, e ir para o estado 43
    RBRACE  fazer shift, e ir para o estado 77
    RETURN  fazer shift, e ir para o estado 78
    ID      fazer shift, e ir para o estado 46
    INTLIT  fazer shift, e ir para o estado 47
    CHRLIT  fazer shift, e ir para o estado 48
    STRLIT  fazer shift, e ir para o estado 49

    SEMI  reduzir usando a regra 59 (ExprOpt)

    ErrStatement  ir para o estado 79
    StatList      ir para o estado 80
    ExprOpt       ir para o estado 81
    GeneralExpr   ir para o estado 56
    Expr          ir para o estado 57


State 40

   89 Expr: LPAR . GeneralExpr RPAR
   90     | LPAR . error RPAR

    error   fazer shift, e ir para o estado 82
    AMP     fazer shift, e ir para o estado 35
    AST     fazer shift, e ir para o estado 36
    LPAR    fazer shift, e ir para o estado 40
    MINUS   fazer shift, e ir para o estado 41
    NOT     fazer shift, e ir para o estado 42
    PLUS    fazer shift, e ir para o estado 43
    ID      fazer shift, e ir para o estado 46
    INTLIT  fazer shift, e ir para o estado 47
    CHRLIT  fazer shift, e ir para o estado 48
    STRLIT  fazer shift, e ir para o estado 49

    GeneralExpr  ir para o estado 83
    Expr         ir para o estado 57


State 41

   79 Expr: MINUS . Expr

    AMP     fazer shift, e ir para o estado 35
    AST     fazer shift, e ir para o estado 36
    LPAR    fazer shift, e ir para o estado 40
    MINUS   fazer shift, e ir para o estado 41
    NOT     fazer shift, e ir para o estado 42
    PLUS    fazer shift, e ir para o estado 43
    ID      fazer shift, e ir para o estado 46
    INTLIT  fazer shift, e ir para o estado 47
    CHRLIT  fazer shift, e ir para o estado 48
    STRLIT  fazer shift, e ir para o estado 49
